--- a/es/classes.html
+++ b/es/classes.html
@@ -146,11 +146,15 @@
         <!-- Left Section: Logo and Studio Name -->
         <div class="navbar-left">
             <a href="/es/index.html" class="navbar-brand-link">
-                <picture>
-                    <source media="(min-width: 1025px)" srcset="/assets/logo/logoMain-300.webp">
-                    <source media="(max-width: 1024px)" srcset="/assets/logo/logoMain-150.webp">
-                    <img src="/assets/logo/logoMain.png" alt="SGP Yoga - Sat Gur Prasaad Yoga studio logo" class="navbar-logo">
-                </picture>
+                <img srcset="assets/logo/logoMain-150.webp 150w,
+                             assets/logo/logoMain-300.webp 300w,
+                             assets/logo/logoMain-600.webp 600w"
+                     sizes="100px"
+                     src="/assets/logo/logoMain-150.webp"
+                     alt="SGP Yoga - Sat Gur Prasaad Yoga studio logo"
+                     class="navbar-logo"
+                     width="150" height="150"
+                     loading="eager">
                 <span class="navbar-brand">SGP Yoga</span>
             </a>
         </div>
@@ -250,11 +254,15 @@
                                 </span>
                             </div>
                             <div class="teacher-banner">
-                                <picture>
-                                    <source media="(min-width: 600px)" srcset="/assets/photos/classes/camila-600.webp">
-                                    <source media="(min-width: 300px)" srcset="/assets/photos/classes/camila-300.webp">
-                                    <img src="/assets/photos/classes/camila-200.webp" alt="Camila, Aerial Yoga teacher" class="teacher-photo">
-                                </picture>
+                                <img srcset="assets/photos/classes/camila-200.webp 200w,
+                                             assets/photos/classes/camila-300.webp 300w,
+                                             assets/photos/classes/camila-600.webp 600w"
+                                     sizes="50px"
+                                     src="/assets/photos/classes/camila-200.webp"
+                                     alt="Camila, Aerial Yoga teacher"
+                                     class="teacher-photo"
+                                     width="200" height="200"
+                                     loading="lazy">
                                 <span class="teacher-name">Camila</span>
                             </div>
                         </div>
@@ -276,11 +284,15 @@
                                 </span>
                             </div>
                             <div class="teacher-banner">
-                                <picture>
-                                    <source media="(min-width: 600px)" srcset="/assets/photos/classes/camila-600.webp">
-                                    <source media="(min-width: 300px)" srcset="/assets/photos/classes/camila-300.webp">
-                                    <img src="/assets/photos/classes/camila-200.webp" alt="Camila, Aerial Yoga teacher" class="teacher-photo">
-                                </picture>
+                                <img srcset="assets/photos/classes/camila-200.webp 200w,
+                                             assets/photos/classes/camila-300.webp 300w,
+                                             assets/photos/classes/camila-600.webp 600w"
+                                     sizes="50px"
+                                     src="/assets/photos/classes/camila-200.webp"
+                                     alt="Camila, Aerial Yoga teacher"
+                                     class="teacher-photo"
+                                     width="200" height="200"
+                                     loading="lazy">
                                 <span class="teacher-name">Camila</span>
                             </div>
                         </div>
@@ -320,11 +332,15 @@
                                 </span>
                             </div>
                             <div class="teacher-banner">
-                                <picture>
-                                    <source media="(min-width: 600px)" srcset="/assets/photos/classes/camila-600.webp">
-                                    <source media="(min-width: 300px)" srcset="/assets/photos/classes/camila-300.webp">
-                                    <img src="/assets/photos/classes/camila-200.webp" alt="Camila, Aerial Yoga teacher" class="teacher-photo">
-                                </picture>
+                                <img srcset="assets/photos/classes/camila-200.webp 200w,
+                                             assets/photos/classes/camila-300.webp 300w,
+                                             assets/photos/classes/camila-600.webp 600w"
+                                     sizes="50px"
+                                     src="/assets/photos/classes/camila-200.webp"
+                                     alt="Camila, Aerial Yoga teacher"
+                                     class="teacher-photo"
+                                     width="200" height="200"
+                                     loading="lazy">
                                 <span class="teacher-name">Camila</span>
                             </div>
                         </div>
@@ -344,11 +360,15 @@
                                 </span>
                             </div>
                             <div class="teacher-banner">
-                                <picture>
-                                    <source media="(min-width: 600px)" srcset="/assets/photos/classes/camila-600.webp">
-                                    <source media="(min-width: 300px)" srcset="/assets/photos/classes/camila-300.webp">
-                                    <img src="/assets/photos/classes/camila-200.webp" alt="Camila, Vinyasa Yoga teacher" class="teacher-photo">
-                                </picture>
+                                <img srcset="assets/photos/classes/camila-200.webp 200w,
+                                             assets/photos/classes/camila-300.webp 300w,
+                                             assets/photos/classes/camila-600.webp 600w"
+                                     sizes="50px"
+                                     src="/assets/photos/classes/camila-200.webp"
+                                     alt="Camila, Vinyasa Yoga teacher"
+                                     class="teacher-photo"
+                                     width="200" height="200"
+                                     loading="lazy">
                                 <span class="teacher-name">Camila</span>
                             </div>
                         </div>
@@ -372,11 +392,15 @@
                                 </span>
                             </div>
                             <div class="teacher-banner">
-                                <picture>
-                                    <source media="(min-width: 600px)" srcset="/assets/photos/classes/dani-600.webp">
-                                    <source media="(min-width: 300px)" srcset="/assets/photos/classes/dani-300.webp">
-                                    <img src="/assets/photos/classes/dani-200.webp" alt="Dani, Aerial Yoga teacher" class="teacher-photo">
-                                </picture>
+                                <img srcset="assets/photos/classes/dani-200.webp 200w,
+                                             assets/photos/classes/dani-300.webp 300w,
+                                             assets/photos/classes/dani-600.webp 600w"
+                                     sizes="50px"
+                                     src="/assets/photos/classes/dani-200.webp"
+                                     alt="Dani, Aerial Yoga teacher"
+                                     class="teacher-photo"
+                                     width="200" height="200"
+                                     loading="lazy">
                                 <span class="teacher-name">Dani</span>
                             </div>
                         </div>
@@ -398,11 +422,15 @@
                                 </span>
                             </div>
                             <div class="teacher-banner">
-                                <picture>
-                                    <source media="(min-width: 600px)" srcset="/assets/photos/classes/camila-600.webp">
-                                    <source media="(min-width: 300px)" srcset="/assets/photos/classes/camila-300.webp">
-                                    <img src="/assets/photos/classes/camila-200.webp" alt="Camila, Aerial Pilates teacher" class="teacher-photo">
-                                </picture>
+                                <img srcset="assets/photos/classes/camila-200.webp 200w,
+                                             assets/photos/classes/camila-300.webp 300w,
+                                             assets/photos/classes/camila-600.webp 600w"
+                                     sizes="50px"
+                                     src="/assets/photos/classes/camila-200.webp"
+                                     alt="Camila, Aerial Pilates teacher"
+                                     class="teacher-photo"
+                                     width="200" height="200"
+                                     loading="lazy">
                                 <span class="teacher-name">Camila</span>
                             </div>
                         </div>
@@ -436,11 +464,15 @@
                                 </span>
                             </div>
                             <div class="teacher-banner">
-                                <picture>
-                                    <source media="(min-width: 600px)" srcset="/assets/photos/classes/harjeet-600.webp">
-                                    <source media="(min-width: 300px)" srcset="/assets/photos/classes/harjeet-300.webp">
-                                    <img src="/assets/photos/classes/harjeet-200.webp" alt="Harjeet, Kundalini Yoga teacher" class="teacher-photo">
-                                </picture>
+                                <img srcset="assets/photos/classes/harjeet-200.webp 200w,
+                                             assets/photos/classes/harjeet-300.webp 300w,
+                                             assets/photos/classes/harjeet-600.webp 600w"
+                                     sizes="50px"
+                                     src="/assets/photos/classes/harjeet-200.webp"
+                                     alt="Harjeet, Kundalini Yoga teacher"
+                                     class="teacher-photo"
+                                     width="200" height="200"
+                                     loading="lazy">
                                 <span class="teacher-name">Harjeet</span>
                             </div>
                         </div>
@@ -613,10 +645,15 @@
                     <!-- Logo and Mission Section -->
                     <div class="footer-column footer-logo-section">
                         <a href="/es/index.html" class="footer-logo-link">
-                            <picture>
-                                <source srcset="/assets/logo/logoMain-300.webp">
-                                <img src="/assets/logo/logoMain.png" alt="SGP Yoga - Sat Gur Prasaad Yoga studio logo" class="footer-logo">
-                            </picture>
+                            <img srcset="assets/logo/logoMain-150.webp 150w,
+                                         assets/logo/logoMain-300.webp 300w,
+                                         assets/logo/logoMain-600.webp 600w"
+                                 sizes="150px"
+                                 src="/assets/logo/logoMain-150.webp"
+                                 alt="SGP Yoga - Sat Gur Prasaad Yoga studio logo"
+                                 class="footer-logo"
+                                 width="150" height="150"
+                                 loading="lazy">
                         </a>
                         <h3>Nuestra Misión</h3>
                         <p class="footer-mission-text">Guiando almas para descubrir su luz interior a través de la práctica transformadora del yoga.</p>
