--- a/es/events.html
+++ b/es/events.html
@@ -90,11 +90,15 @@
         <!-- Left Section: Logo and Studio Name -->
         <div class="navbar-left">
             <a href="/es/index.html" class="navbar-brand-link">
-                <picture>
-                    <source media="(min-width: 1025px)" srcset="/assets/logo/logoMain-300.webp">
-                    <source media="(max-width: 1024px)" srcset="/assets/logo/logoMain-150.webp">
-                    <img src="/assets/logo/logoMain.png" alt="SGP Yoga - Sat Gur Prasaad Yoga studio logo" class="navbar-logo">
-                </picture>
+                <img srcset="assets/logo/logoMain-150.webp 150w,
+                             assets/logo/logoMain-300.webp 300w,
+                             assets/logo/logoMain-600.webp 600w"
+                     sizes="100px"
+                     src="/assets/logo/logoMain-150.webp"
+                     alt="SGP Yoga - Sat Gur Prasaad Yoga studio logo"
+                     class="navbar-logo"
+                     width="150" height="150"
+                     loading="eager">
                 <span class="navbar-brand">SGP Yoga</span>
             </a>
         </div>
@@ -188,11 +192,13 @@
                 <!-- Workshops Tile -->
                 <div class="event-type-tile" data-type="workshops">
                     <picture>
-                        <source media="(min-width: 1200px)" srcset="/assets/photos/events/workshops-1200.webp">
-                        <source media="(min-width: 900px)" srcset="/assets/photos/events/workshops-900.webp">
-                        <source media="(min-width: 641px)" srcset="/assets/photos/events/workshops-720.webp">
-                        <source media="(max-width: 640px)" srcset="/assets/photos/events/workshops-480.webp">
-                        <img src="/assets/photos/events/workshops-720.webp" alt="A close up on a yogi playing a tibetan sound bowl during a sound healing session" class="event-type-image" loading="lazy">
+                        <source type="image/webp"
+                                srcset="/assets/photos/events/workshops-480.webp 480w,
+                                        assets/photos/events/workshops-720.webp 720w,
+                                        assets/photos/events/workshops-900.webp 900w,
+                                        assets/photos/events/workshops-1200.webp 1200w"
+                                sizes="(max-width: 640px) 100vw, 33vw">
+                        <img src="/assets/photos/events/workshops-720.webp" alt="A close up on a yogi playing a tibetan sound bowl during a sound healing session" class="event-type-image" width="720" height="480" loading="lazy">
                     </picture>
                     <div class="event-type-overlay">
                         <div class="event-type-content">
@@ -205,11 +211,13 @@
                 <!-- Retreats Tile -->
                 <div class="event-type-tile" data-type="retreats">
                     <picture>
-                        <source media="(min-width: 1200px)" srcset="/assets/photos/events/retreats-1200.webp">
-                        <source media="(min-width: 900px)" srcset="/assets/photos/events/retreats-900.webp">
-                        <source media="(min-width: 641px)" srcset="/assets/photos/events/retreats-720.webp">
-                        <source media="(max-width: 640px)" srcset="/assets/photos/events/retreats-480.webp">
-                        <img src="/assets/photos/events/retreats-720.webp" alt="A female yogi performing a hanstand with legs spread out on a beach during sunset" class="event-type-image" loading="lazy">
+                        <source type="image/webp"
+                                srcset="/assets/photos/events/retreats-480.webp 480w,
+                                        assets/photos/events/retreats-720.webp 720w,
+                                        assets/photos/events/retreats-900.webp 900w,
+                                        assets/photos/events/retreats-1200.webp 1200w"
+                                sizes="(max-width: 640px) 100vw, 33vw">
+                        <img src="/assets/photos/events/retreats-720.webp" alt="A female yogi performing a hanstand with legs spread out on a beach during sunset" class="event-type-image" width="720" height="480" loading="lazy">
                     </picture>
                     <div class="event-type-overlay">
                         <div class="event-type-content">
@@ -222,11 +230,13 @@
                 <!-- Teacher Trainings Tile -->
                 <div class="event-type-tile" data-type="trainings">
                     <picture>
-                        <source media="(min-width: 1200px)" srcset="/assets/photos/events/teacher-trainings-1200.webp">
-                        <source media="(min-width: 900px)" srcset="/assets/photos/events/teacher-trainings-900.webp">
-                        <source media="(min-width: 641px)" srcset="/assets/photos/events/teacher-trainings-720.webp">
-                        <source media="(max-width: 640px)" srcset="/assets/photos/events/teacher-trainings-480.webp">
-                        <img src="/assets/photos/events/teacher-trainings-720.webp" alt="A group of teacher training students standing in a cricle and holding hands, eyes closed, meditating together" class="event-type-image" loading="lazy">
+                        <source type="image/webp"
+                                srcset="/assets/photos/events/teacher-trainings-480.webp 480w,
+                                        assets/photos/events/teacher-trainings-720.webp 720w,
+                                        assets/photos/events/teacher-trainings-900.webp 900w,
+                                        assets/photos/events/teacher-trainings-1200.webp 1200w"
+                                sizes="(max-width: 640px) 100vw, 33vw">
+                        <img src="/assets/photos/events/teacher-trainings-720.webp" alt="A group of teacher training students standing in a cricle and holding hands, eyes closed, meditating together" class="event-type-image" width="720" height="480" loading="lazy">
                     </picture>
                     <div class="event-type-overlay">
                         <div class="event-type-content">
@@ -307,10 +317,15 @@
                     <!-- Logo and Mission Section -->
                     <div class="footer-column footer-logo-section">
                         <a href="/es/index.html" class="footer-logo-link">
-                            <picture>
-                                <source srcset="/assets/logo/logoMain-300.webp">
-                                <img src="/assets/logo/logoMain.png" alt="SGP Yoga - Sat Gur Prasaad Yoga studio logo" class="footer-logo">
-                            </picture>
+                            <img srcset="assets/logo/logoMain-150.webp 150w,
+                                         assets/logo/logoMain-300.webp 300w,
+                                         assets/logo/logoMain-600.webp 600w"
+                                 sizes="150px"
+                                 src="/assets/logo/logoMain-150.webp"
+                                 alt="SGP Yoga - Sat Gur Prasaad Yoga studio logo"
+                                 class="footer-logo"
+                                 width="150" height="150"
+                                 loading="lazy">
                         </a>
                         <h3>Nuestra Misión</h3>
                         <p class="footer-mission-text">Guiando almas para descubrir su luz interior a través de la práctica transformadora del yoga.</p>
